--- a/articles/another-post/index.mdx
+++ b/articles/another-post/index.mdx
@@ -7,3 +7,5 @@ tags: ["animals", "Chicago", "zoos"]
 ---
 
 Here's another post! It's even better than the first one!
+
+![castello](./danka-peter-xv4L_bb0Z_8-unsplash.jpg)
