--- a/articles/yet-another-post/index.mdx
+++ b/articles/yet-another-post/index.mdx
@@ -6,4 +6,15 @@ hero_image_alt: "草"
 tags: ["zoos"]
 ---
 
-Wow look at all this content. How do they do it?
+# aaaaaa
+
+![full view](./guinardo.jpg)
+
+[MDX](https://yahoo.co.jp)
+
+# Below is a JSX block
+
+<div style={{ padding: "10px 30px", backgroundColor: "tomato" }}>
+  <h2>Try making this heading have the color green</h2>
+  <img src="./guinardo.jpg" />
+</div>
