--- a/articles/yet-another-post/index.mdx
+++ b/articles/yet-another-post/index.mdx
@@ -6,6 +6,19 @@ hero_image_alt: "草"
 tags: ["zoos"]
 ---
 
+import PrimaryButton from "../../src/components/PrimaryButton"
+import image1 from "./guinardo.jpg"
+import {
+  Table,
+  Thead,
+  Tbody,
+  Tfoot,
+  Tr,
+  Th,
+  Td,
+  TableCaption,
+} from "@chakra-ui/react"
+
 # aaaaaa
 
 ![full view](./guinardo.jpg)
@@ -18,3 +31,42 @@ tags: ["zoos"]
   <h2>Try making this heading have the color green</h2>
   <img src="./guinardo.jpg" />
 </div>
+
+<PrimaryButton>aiueo</PrimaryButton>
+
+<img src={image1} />
+
+<Table variant="simple">
+  <TableCaption>Imperial to metric conversion factors</TableCaption>
+  <Thead>
+    <Tr>
+      <Th>To convert</Th>
+      <Th>into</Th>
+      <Th isNumeric>multiply by</Th>
+    </Tr>
+  </Thead>
+  <Tbody>
+    <Tr>
+      <Td>inches</Td>
+      <Td>millimetres (mm)</Td>
+      <Td isNumeric>25.4</Td>
+    </Tr>
+    <Tr>
+      <Td>feet</Td>
+      <Td>centimetres (cm)</Td>
+      <Td isNumeric>30.48</Td>
+    </Tr>
+    <Tr>
+      <Td>yards</Td>
+      <Td>metres (m)</Td>
+      <Td isNumeric>0.91444</Td>
+    </Tr>
+  </Tbody>
+  <Tfoot>
+    <Tr>
+      <Th>To convert</Th>
+      <Th>into</Th>
+      <Th isNumeric>multiply by</Th>
+    </Tr>
+  </Tfoot>
+</Table>
