--- a/articles/verbos-cambio/index.mdx
+++ b/articles/verbos-cambio/index.mdx
@@ -111,7 +111,7 @@ export const examples = {
   </Center>
   <GridItem rowSpan={1} colSpan={2} bg="cBlue2" px="2">
     budista.
-  </GridItem>{" "}
+  </GridItem>
   <GridItem rowSpan={1} colSpan={2} bg="cBlue2" px="2">
     millonario.
   </GridItem>
