--- a/articles/verbos-cambio/index.mdx
+++ b/articles/verbos-cambio/index.mdx
@@ -81,7 +81,7 @@ export const examples = {
   </Tbody>
 </Table>
 
-## hacerse
+## hacerse 「〜になる」
 
 「職業」、「イデオロギー」、「宗教」、「金」に関する変化と覚えてしまう。
 
@@ -132,7 +132,7 @@ export const examples = {
   </GridItem>
 </Grid>
 
-## ponerse
+## ponerse 「〜になる」
 
 心と体の一時的な変化。健康面での変化にも使う。
 
@@ -171,7 +171,7 @@ export const examples = {
   </Center>
 </Grid>
 
-## volverse
+## volverse 「〜になる」
 
 personalidad（人としての個性、性格、人柄）の変化。
 
@@ -216,7 +216,7 @@ personalidad（人としての個性、性格、人柄）の変化。
   </Center>
 </Grid>
 
-## quedarse
+## quedarse 「〜になる」
 
 ### その１
 
@@ -333,7 +333,7 @@ personalidad（人としての個性、性格、人柄）の変化。
   </Tbody>
 </Table>
 
-## convertirse en
+## convertirse en 「〜になる」
 
 ### その１、姿かたちの極端な変化を表す。
 
