--- a/articles/condicional/index.mdx
+++ b/articles/condicional/index.mdx
@@ -3,7 +3,7 @@ title: "Condicional（直接法過去未来）"
 date: "2021-09-06"
 hero_image: "./chica.png"
 hero_image_alt: "勉強してる女の子"
-tags: ["condicional（直接法過去未来）"]
+tags: ["condicional"]
 ---
 
 import {
