--- a/articles/verbos-cambio/index.mdx
+++ b/articles/verbos-cambio/index.mdx
@@ -3,7 +3,7 @@ title: "Los verbos de cambio（〜になる）"
 date: "2021-09-07"
 hero_image: "./sapo-hero.png"
 hero_image_alt: "カエルのイラスト"
-tags: ["vocabulario（語彙）"]
+tags: ["vocabulario"]
 ---
 
 import {
