--- a/articles/pasiva/index.mdx
+++ b/articles/pasiva/index.mdx
@@ -3,10 +3,9 @@ title: "La voz pasiva（受動態）"
 date: "2021-09-08"
 hero_image: "./pasiva.png"
 hero_image_alt: "子供と大人が柔道をしている"
-tags: ["la voz pasiva"]
+tags: ["la voz pasiva", "impersonalidad"]
 ---
 
-import { StaticImage } from "gatsby-plugin-image"
 import {
   Table,
   Tbody,
