--- a/articles/condicional/index.mdx
+++ b/articles/condicional/index.mdx
@@ -41,21 +41,21 @@ export const examples = {
   ],
   exes3: [
     "A. Estoy constipado, me siento fatal.",
-    "風邪ひいて、具合最悪。",
+    "A. 風邪ひいて、具合最悪。",
     "B. Yo que tú iría al médico.",
-    "私なら医者に行くよ。",
+    "B. 私なら医者に行くよ。",
     "A. Tengo que hacer un viaje largo pero no sé si el coche está en condiciones.",
-    "長距離旅行しなきゃならないんだけど、車が良い状態にある分からないんだ。",
+    "A. 長距離旅行しなきゃならないんだけど、車が良い状態にある分からないんだ。",
     "B. Deberías llevarlo al taller.",
-    "整備工場に持っていった方がいいよ。",
+    "B. 整備工場に持っていった方がいいよ。",
     "A. Me gusta el chico nuevo, es muy guapo.",
-    "あの新入生いいね、とてもかっこいい。",
+    "A. あの新入生いいね、とてもかっこいい。",
     "B. Pues yo en tu lugar le pediría su LINE.",
-    "私なら、彼に LINE を聞いちゃうけどな。",
+    "B. 私なら、彼に LINE を聞いちゃうけどな。",
     "A. ¿Qué harías en mi lugar?",
-    "君ならどうする？",
+    "A. 君ならどうする？",
     "B. Yo que tú lo compraría ahora.",
-    "私なら今それを買うよ。",
+    "B. 私なら今それを買うよ。",
   ],
   advices: [
     "yo que tú + condicional節.",
@@ -89,7 +89,7 @@ export const examples = {
     "Según el periódico, Messi saldría del Barça.",
     "新聞によると、メッシはバルサを去るんだそうだ。",
     "Dicen que Jaime tiene casi 30 años. Al parecer, tendría 30 años.",
-    "ハイメは 30 歳に近いと（みんなが）言っている。一見、30 歳には見えるね。",
+    "ハイメは 30 歳に近いと（みんなが）言っている。たしかに、一見、30 歳には見えるね。",
   ],
   exes6: [
     "Me fui a España en 2000 y 2 años después conocería a Ariadna, mi mujer.",
@@ -336,7 +336,7 @@ export const examples = {
   <GridItem rowSpan={1} colSpan={1} color="cBeige" align="center" bg="cBlue2">
     [条件節]
   </GridItem>
-  <GridItem rowSpan={1} colSpan={1} color="cGray" align="center" bg="cBlue2">
+  <GridItem rowSpan={1} colSpan={1} color="cRed3" align="center" bg="cBlue2">
     [帰結節]
   </GridItem>
   <GridItem
@@ -352,7 +352,7 @@ export const examples = {
   <GridItem
     rowSpan={1}
     colSpan={1}
-    color="cGray"
+    color="cRed3"
     px="1"
     bg="cBlue2"
     align="center"
@@ -369,16 +369,16 @@ export const examples = {
   >
     Si + imperfecto de subjuntivo
   </GridItem>
-  <GridItem rowSpan={2} colSpan={1} color="cGray" px="1" bg="cBlue2">
+  <GridItem rowSpan={2} colSpan={1} color="cRed3" px="1" bg="cBlue2">
     condicional
   </GridItem>
   <GridItem rowSpan={2} colSpan={2} color="cBeige" px="1" bg="cBlue2">
     Si yo fuera rico,
-    <span style={{ color: "#737363" }}> siempre muy feliz.</span>
+    <span style={{ color: "#FFC6BF" }}> siempre muy feliz.</span>
   </GridItem>
   <GridItem rowSpan={2} colSpan={2} color="cBeige" px="1" bg="cBlue2">
     もし私が金持ちならば、
-    <span style={{ color: "#737363" }}>すっと幸せに暮らせるだろう。</span>
+    <span style={{ color: "#FFC6BF" }}>すっと幸せに暮らせるだろう。</span>
   </GridItem>
 </Grid>
 
