--- a/articles/pluscuamperfecto/index.mdx
+++ b/articles/pluscuamperfecto/index.mdx
@@ -113,44 +113,44 @@ export const examples = {
   「 haber の preterito imperfecto（線過去） + pariticipio（過去分詞）」
 </Box>
 
-## haver の preterito imperfecto（線過去）の conjugación（活用）
+## haber の preterito imperfecto（線過去）の conjugación（活用）
 
 <Table variant="striped" colorScheme="blackAlpha" mt="3" mb="8">
   <Tbody>
     <Tr>
       <Td>yo</Td>
       <Td>
-        hablar<span style={{ color: "#E18C7A" }}>ía</span>
+        hab<span style={{ color: "#E18C7A" }}>ía</span>
       </Td>
     </Tr>
     <Tr>
       <Td>tú</Td>
       <Td>
-        hablar<span style={{ color: "#E18C7A" }}>ías</span>
+        hab<span style={{ color: "#E18C7A" }}>ías</span>
       </Td>
     </Tr>
     <Tr>
       <Td>él</Td>
       <Td>
-        hablar<span style={{ color: "#E18C7A" }}>ía</span>
+        hab<span style={{ color: "#E18C7A" }}>ía</span>
       </Td>
     </Tr>
     <Tr>
       <Td>nosotros</Td>
       <Td>
-        hablar<span style={{ color: "#E18C7A" }}>íamos</span>
+        hab<span style={{ color: "#E18C7A" }}>íamos</span>
       </Td>
     </Tr>
     <Tr>
       <Td>vosotros</Td>
       <Td>
-        hablar<span style={{ color: "#E18C7A" }}>íais</span>
+        hab<span style={{ color: "#E18C7A" }}>íais</span>
       </Td>
     </Tr>
     <Tr>
       <Td>ellos</Td>
       <Td>
-        hablar<span style={{ color: "#E18C7A" }}>ían</span>
+        hab<span style={{ color: "#E18C7A" }}>ían</span>
       </Td>
     </Tr>
   </Tbody>
