--- a/articles/certeza/index.mdx
+++ b/articles/certeza/index.mdx
@@ -15,6 +15,46 @@ import {
   GridItem,
   Divider,
   Image,
+  Center,
 } from "@chakra-ui/react"
 
 ## アイウエオ
+
+<Grid
+  templateRows="repeat(7, 1fr)"
+  templateColumns="repeat(12, 1fr)"
+  gap={1}
+  mt="4"
+>
+  <Center as={GridItem} rowSpan={1} colSpan={7} bg="cGray2">
+    主節
+  </Center>
+  <Center as={GridItem} rowSpan={1} colSpan={5} bg="cGray2">
+    従属節
+  </Center>
+  <GridItem rowSpan={6} colSpan={2} bg="cYellow" p="2">
+    Es
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+    cierto（確か）
+  </GridItem>
+  <GridItem rowSpan={6} colSpan={5} bg="cYellow" p="2">
+    que + indicativo
+    <br /> que + subjuntivo
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+    seguro（確か）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+    evidente（明らか）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+    obvio（明らか）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+    verdad（本当）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+    indudable（疑う余地なし）
+  </GridItem>
+</Grid>
