--- a/articles/certeza/index.mdx
+++ b/articles/certeza/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "subjuntivo de certeza（接続法 - 確実性）"
+title: "subjuntivo de certeza（接続法 - 確実さ）"
 date: "2021-09-21"
 tags: ["subjuntivo"]
 ---
@@ -21,40 +21,85 @@ import {
 ## アイウエオ
 
 <Grid
-  templateRows="repeat(7, 1fr)"
+  templateRows="repeat(17, 1fr)"
   templateColumns="repeat(12, 1fr)"
   gap={1}
   mt="4"
+  color="cGray"
 >
-  <Center as={GridItem} rowSpan={1} colSpan={7} bg="cGray2">
+  <Center as={GridItem} rowSpan={1} colSpan={7} bg="cYellow2">
     主節
   </Center>
-  <Center as={GridItem} rowSpan={1} colSpan={5} bg="cGray2">
+  <Center as={GridItem} rowSpan={1} colSpan={5} bg="cYellow2">
     従属節
   </Center>
-  <GridItem rowSpan={6} colSpan={2} bg="cYellow" p="2">
+  <GridItem rowSpan={6} colSpan={2} bg="cYellow2" p="2">
     Es
   </GridItem>
-  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
     cierto（確か）
   </GridItem>
-  <GridItem rowSpan={6} colSpan={5} bg="cYellow" p="2">
-    que + indicativo
-    <br /> que + subjuntivo
+  <GridItem rowSpan={16} colSpan={5} bg="cYellow2" p="2">
+    que + indicativo.
+    <br />
+    （主節が肯定文の時）
+    <br />
+    <br /> que + subjuntivo.
+    <br />
+    （主節が否定文/疑問文の時）
   </GridItem>
-  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
     seguro（確か）
   </GridItem>
-  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
     evidente（明らか）
   </GridItem>
-  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
     obvio（明らか）
   </GridItem>
-  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
     verdad（本当）
   </GridItem>
-  <GridItem rowSpan={1} colSpan={5} bg="cYellow" p="2">
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
     indudable（疑う余地なし）
+  </GridItem>
+  <GridItem rowSpan={3} colSpan={2} bg="cYellow2" p="2">
+    Está
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    claro（明らか）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    comprobado（確認された）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    demostrado（証明された）
+  </GridItem>
+  <GridItem rowSpan={2} colSpan={2} bg="cYellow2" p="2">
+    Estoy
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    seguro de（私は確信している）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    convencido de（私は確信している）
+  </GridItem>
+  <GridItem rowSpan={5} colSpan={2} bg="cYellow2" p="2">
+    tengo
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    claro（私にとって明らか）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    clarísimo（私にとって明らか）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    la seguridad de（私にとって確実）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    constancia de（私にとっては常だ）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={5} bg="cYellow2" p="2">
+    noticias de（私は知っている）
   </GridItem>
 </Grid>
