--- a/articles/certeza/index.mdx
+++ b/articles/certeza/index.mdx
@@ -76,14 +76,14 @@ export const examples = {
     Es seguro que Jaime sabe nadar.
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
-    確かだ、ハイメが泳げることは。
+    確かだ、彼が泳げることは。
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
     <span style={{ color: "#E18C7A" }}>No</span> es seguro que Jaime{" "}
     <span style={{ color: "#E18C7A" }}>sepa</span> nadar.
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
-    確かではない、ハイメが泳げることは。
+    確かではない、彼が泳げることは。
   </GridItem>
 </Grid>
 
