--- a/articles/certeza/index.mdx
+++ b/articles/certeza/index.mdx
@@ -73,13 +73,13 @@ export const examples = {
   color="cYellow2"
 >
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
-    Es seguro que Jaime sabe nadar.
+    Es seguro que sabe nadar.
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
     確かだ、彼が泳げることは。
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
-    <span style={{ color: "#E18C7A" }}>No</span> es seguro que Jaime{" "}
+    <span style={{ color: "#E18C7A" }}>No</span> es seguro que{" "}
     <span style={{ color: "#E18C7A" }}>sepa</span> nadar.
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cBlue" p="2" pl="3">
