--- a/articles/futuro-perfecto/index.mdx
+++ b/articles/futuro-perfecto/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "futuro perfecto（未来完了）"
+title: "Futuro perfecto（未来完了）"
 date: "2021-09-30"
 # hero_image: "./certeza.png"
 # hero_image_alt: "No es seguro que Jaime sepa nadar."
@@ -71,31 +71,27 @@ import {
   </Tbody>
 </Table>
 
-## futuro perfecto（未来完了） の 2 つの用法
+## Futuro perfecto（未来完了） の 2 つの用法
 
 <Grid
-  templateRows="repeat(6, 1fr)"
+  templateRows="repeat(4, 1fr)"
   templateColumns="repeat(1, 1fr)"
   gap={1}
   mt="4"
-  color="cBeige"
+  color="cGray"
 >
-  <GridItem rowSpan={1} colSpan={1} bg="cBlue2" p="2">
-    1. Hipótesis de preterito perfecto.（現在完了時制の出来事に対する推測）
+  <GridItem rowSpan={1} colSpan={1} bg="cYellow" p="2">
+    1.
+    未来の一時点までに完了しているだろうことを述べる時（いつ完了したかの言及はなし）
   </GridItem>
-  <GridItem rowSpan={1} colSpan={1} bg="cBlue2" p="2">
+  <GridItem rowSpan={1} colSpan={1} bg="cYellow2" p="2">
+    Hasta 2100, habremos tenido la puerta mágica y podremos ir a Japón de España
+    cualquier momento.
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={1} bg="cYellow" p="2">
+    2. Hipótesis de preterito perfecto.（現在完了時制の出来事に対する推測）
+  </GridItem>
+  <GridItem rowSpan={1} colSpan={1} bg="cYellow2" p="2">
     Sergio todavía no he venido. Habrá tráfico.
-  </GridItem>
-  <GridItem rowSpan={1} colSpan={1} bg="cBlue2" p="2">
-    セルヒオはまだ来ていない。渋滞しているんだろう。
-  </GridItem>
-  <GridItem rowSpan={1} colSpan={1} bg="cRed" p="2">
-    2. 未来の一時点までに完了しているだろうことを述べる時
-  </GridItem>
-  <GridItem rowSpan={1} colSpan={1} bg="cRed" p="2">
-    Te traeré tu libro el jueves. Creo que para entonces ya lo habré leído.
-  </GridItem>
-  <GridItem rowSpan={1} colSpan={1} bg="cRed" p="2">
-    木曜日に君の本を持っていくよ。その時までには読み終わってるだろうから。
   </GridItem>
 </Grid>
